tests/machine/x/cobol/short_circuit.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:18Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. SHORT-CIRCUIT.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-BOOM-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       PERFORM FN_BOOM USING 1 2
       IF 0 AND FN_BOOM_RES
           DISPLAY "true"
       ELSE
           DISPLAY "false"
       END-IF
       PERFORM FN_BOOM USING 1 2
       IF 1 OR FN_BOOM_RES
           DISPLAY "true"
       ELSE
           DISPLAY "false"
       END-IF
       STOP RUN.
       
       FN_BOOM.
           PROCEDURE DIVISION USING A B.
               DISPLAY "boom"
               COMPUTE FN_BOOM_RES = 1
               EXIT.
